--- a/sources/btop.toml
+++ b/sources/btop.toml
@@ -1,4 +1,5 @@
 homepage = "https://github.com/aristocratos/btop"
+programmingLanguage = "C++"
 url = "https://github.com/aristocratos/btop/releases/download/v${version.main}/btop-${architecture}-linux-musl.tbz"
 compression = ".tbz"
 version.main = "1.4.4"
