--- a/sources/ghostty.toml
+++ b/sources/ghostty.toml
@@ -1,4 +1,5 @@
 homepage = "https://ghostty.org/"
+programmingLanguage = "Zig"
 url = "https://archive.archlinux.org/packages/g/ghostty/ghostty-${version.main}-${architecture}.pkg.tar.zst"
 compression = ".tar.zst"
 version.main = "1.1.3-1"
