--- a/sources/nushell.toml
+++ b/sources/nushell.toml
@@ -1,4 +1,5 @@
 homepage = "https://www.nushell.sh/"
+programmingLanguage = "Rust"
 url = "https://github.com/nushell/nushell/releases/download/${version.main}/nu-${version.main}-${architecture}-unknown-linux-gnu.tar.gz"
 rootPath = "nu-${version.main}-${architecture}-unknown-linux-gnu"
 compression = ".tar.gz"
