Fix ghostty by downgrading some packages, add binaries from jbigkit, and add dependency visualisation to packagingHelper.nu

--- a/lib/libxkbcommon.so.0.toml
+++ b/lib/libxkbcommon.so.0.toml
@@ -1,5 +1,3 @@
 source = "libxkbcommon"
 directory = "usr/lib"
-directlyDependentSharedLibraries = [
-  "libc.so.6",
-]
+directlyDependentSharedLibraries = ["libc.so.6"]
