Add kotlin native, update odinfmt and ols, remove ncurses binaries because they are provided by the host system, and fix spelling issues

--- a/sources/act.toml
+++ b/sources/act.toml
@@ -1,4 +1,4 @@
-insallationWarnings = ["Act uses docker by default, but docker has not been packaged. The plan is for bento to setup act to use podman by default once podman works because podman does not require root priviladges unlike docker."]
+installationWarnings = ["Act uses docker by default, but docker has not been packaged. The plan is for bento to setup act to use podman by default once podman works because podman does not require root priviladges unlike docker."]
 homepage = "https://nektosact.com/"
 urlInMirror = "nektos/act/releases/download/v${version.main}/act_linux_${architecture}.tar.gz"
 compression = ".tar.gz"
