--- a/lib/libgdk_pixbuf-2.0.so.0.toml
+++ b/lib/libgdk_pixbuf-2.0.so.0.toml
@@ -6,8 +6,6 @@ directSharedLibraryDependencies = [
   "libgobject-2.0.so.0",
   "libgmodule-2.0.so.0",
   "libgio-2.0.so.0",
-  "libpng16.so.16",
-  "libjpeg.so.8",
-  "libtiff.so.6",
+  "libglycin-2.so.0",
   "libc.so.6",
 ]
